<resources>
    <string name="app_name">Retro Snake</string>

    <!-- MENU GLOWNE -->
    <string name="title">Retro Snake</string>
    <string name="exit">Exit</string>
    <string name="start">Start</string>
    <string name="load">Load Game</string>
    <string name="hscore">High Score</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">settings</string>
    <string name="instructions">Instructions</string>


    <!-- USTAWIENIA -->
    <string name="set">Settings</string>
    <string name="lang">Language EN</string>
    <string name="orient">Orient V</string>
    <string name="music">Music ON</string>
    <string name="back">Back to menu</string>


    <!-- INSTRUKCJE -->
    <string name="instrukt">Tu powinno byc cos po angielsku</string>

    <!-- NAJLEPSZE WYNIKI -->
    <string name="hs">High Scores</string>



    <string name="action_settings">Settings</string>

    <string name="title_activity_highscores">highscores</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_high_scores">HighScores</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_instructions">Instructions</string>
    <string name="title_activity_game">game</string>
    <string name="title_activity_gameplay">gameplay</string>
    <string name="title_activity_gra1">gra1</string>

    <string name="gameover">Game Over</string>
    <string name="paused">Paused</string>
    <string name="share">Share on Facebook</string>
    <string name="ret">Return</string>
    <string name="musicon">music on</string>
    <string name="musicoff">music off</string>
    <string name="your">Your score is</string>
    <string name="title_activity_facebook">facebook</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="warn">Do you want to share this on Facebook</string>

</resources>
