<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.dominik.aplikacjawaz.settings"
    android:background="@drawable/background">

    <TextView android:text="@string/title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:textColor="#000000"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:id="@+id/title" />

    <TextView android:text="@string/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:gravity="center"
        android:textColor="#000000"
        android:id="@+id/set"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lang"
        android:id="@+id/button1"
        android:textSize="20dp"
        android:gravity="center"
        android:background="@drawable/czycisk"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:onClick="Lang"
        android:layout_marginTop="114dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music"
        android:id="@+id/button2"
        android:textSize="20dp"
        android:background="@drawable/czycisk"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/button1"
        android:onClick="Music"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orient"
        android:id="@+id/button3"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:background="@drawable/czycisk"
        android:onClick="Orient"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/button5"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:background="@drawable/czycisk"
        android:layout_below="@+id/button3"
        android:onClick="BackToMenu"
        android:layout_centerHorizontal="true" />



</RelativeLayout>
