
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.dominik.aplikacjawaz.menu"
    android:background="@drawable/background">

    <TextView android:text="@string/title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:textColor="#000000"
        android:layout_marginTop="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:id="@+id/title" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:id="@+id/button1"
        android:textSize="25dp"
        android:gravity="center"
        android:background="@drawable/czycisk"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:onClick="Start"
        android:layout_marginTop="114dp" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:id="@+id/button4"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:background="@drawable/czycisk"
        android:layout_below="@+id/button5"
        android:onClick="onSettingsButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        android:id="@+id/button5"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:background="@drawable/czycisk"
        android:layout_below="@+id/button1"
        android:onClick="InstructionsButton"
        android:layout_centerHorizontal="true" />



</RelativeLayout>
