<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/background">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="5dp"
        android:layout_alignParentTop="true"
        android:id="@+id/linearLayout">
        <TextView android:text="@string/warn"
            android:padding="5dp"
            android:id="@+id/waarnn"
            android:textColor="#000000"
            android:textSize="30dp"
            android:gravity="center"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_alignParentBottom="true">

    </LinearLayout>

    <Button
        android:layout_height="wrap_content"
        android:id="@+id/FacebookShareButton" android:text="@string/yes"
        android:layout_width="120dp" android:layout_gravity="center_horizontal"
        android:onClick="share"
        android:padding="5dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="150dp"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:background="@drawable/czycisk"

        android:layout_alignParentStart="true"
        android:layout_marginStart="45dp" />

    <Button
        android:layout_height="wrap_content"
        android:id="@+id/FacebookShareNotButton" android:text="@string/no"
        android:layout_width="120dp" android:layout_gravity="center_horizontal"
        android:onClick="doNotShare"
        android:padding="5dp"
        android:layout_marginRight="45dp"
        android:layout_below="@+id/linearLayout"
        android:layout_marginTop="150dp"
        android:layout_alignParentRight="true"
        android:background="@drawable/czycisk"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="45dp" />
</RelativeLayout>